--- a/src/componentes/Colaborador/colaborador.css
+++ b/src/componentes/Colaborador/colaborador.css
@@ -1,5 +1,6 @@
 .colaborador {
     width: 280px;
+    position: relative;
 }
 
 .colaborador .cabecalho {
@@ -34,4 +35,19 @@
     line-height: 22px;
     color: #212121;
     padding: 0 16px;
+}
+
+.deletar{
+    position: absolute;
+    right: -13px;
+    top: -13px;
+}
+
+.deletar:hover{
+    cursor: pointer;
+}
+
+.colaborador .favorito{
+    margin-top: 15px;
+    cursor: pointer;
 }
