--- a/src/componentes/Formulario/formulario.css
+++ b/src/componentes/Formulario/formulario.css
@@ -2,14 +2,18 @@
     display: flex;
     justify-content: center;
     margin: 80px 0;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin: 80px 50px;
 
 }
 .formulario-container .formulario {
-    max-width: 80%;
+    height: fit-content;
     background: #F7F7F7;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
     padding: 36px 64px;
+    flex: 1;
 }
 .formulario-container .formulario h2 {
     font-weight: 400;
