--- a/src/componentes/ListaSuspensa/lista-suspensa.css
+++ b/src/componentes/ListaSuspensa/lista-suspensa.css
@@ -1,5 +1,6 @@
 .lista-suspensa {
     margin: 24px 0;
+    position: relative;
 }
 
 .lista-suspensa label {
@@ -16,4 +17,11 @@
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
+}
+
+.lista-suspensa .addTime{
+    position: absolute;
+    top: 58px;
+    right: -44px;
+    cursor: pointer;
 }
